--- a/src/app/list/list.page.scss
+++ b/src/app/list/list.page.scss
@@ -1,1 +1,5 @@
-
+.profile{
+  height: 250px;
+  background: #18dae9
+  //background: linear-gradient(90deg, rgba(49,42,159,1) 3%, rgba(33,33,161,1) 12%, rgba(24,218,233,1) 61%);
+}
