--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -9,8 +9,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
-  <div class="profile">
+<ion-content padding>
+  <div class="profile" >
     <ion-row color="primary" justify-content-center >
       <ion-col align-self-center size-md="6" size-lg="5" size-xs="12" style="text-align: center">
 
@@ -20,9 +20,51 @@
             <img src="assets/man.png" style="width: 100px; height: 100px">
             <br>
             <br>
-        <!--<h4>{{}}</h4>-->
-</ion-col>
+            <b><h5>Mr {{fullname}}</h5></b>
+
+            <b><h6>{{occupation}}</h6></b>
+      </ion-col>
     </ion-row>
   </div>
 
+    <ion-grid justify-content-center>
+        <ion-row  >
+            <ion-col size="12">
+                <ion-card>
+                    <ion-card-header>
+
+                        <ion-card-title>Accounts</ion-card-title>
+                    </ion-card-header>
+
+                    <ion-card-content>
+                       <h1><b>00{{accounts}}</b></h1>
+                    </ion-card-content>
+                </ion-card>
+
+            </ion-col>
+
+        </ion-row>
+
+    </ion-grid>
+    <div class="hr"> </div>
+
+    <h6>Change Password</h6>
+
+    <ion-item>
+        <ion-label position="floating">Old Password</ion-label>
+        <ion-input type="password" [(ngModel)]="oldPassword"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">New Password</ion-label>
+        <ion-input type="password" [(ngModel)]="newPassword"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">Confirm Password</ion-label>
+        <ion-input type="password" [(ngModel)]="confirmPassword"></ion-input>
+    </ion-item>
+
+    <div padding>
+        <ion-button (click)="change()" expand="block">Change Password</ion-button>
+
+    </div>
 </ion-content>
