--- a/src/app/list/list.page.scss
+++ b/src/app/list/list.page.scss
@@ -1,5 +1,12 @@
 .profile{
-  height: 250px;
-  background: #18dae9
+  height: 300px;
+  //background: #18dae9
   //background: linear-gradient(90deg, rgba(49,42,159,1) 3%, rgba(33,33,161,1) 12%, rgba(24,218,233,1) 61%);
+  //background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+  background-image: radial-gradient(circle, #9abcee, #89c9f6, #7ad5fa, #70e1f7, #73ebf0);
+}
+.hr {
+  border-bottom: 1px solid #ccc;
+  margin: 10px 0;
+  width: 100%;
 }
